<resources>

    <string name="app_name">Android Sample</string>

    <string name="nav_name">Android Sample App</string>
    <string name="nav_subtitle">novotnyfra@gmail.com</string>

    <string name="profile_picture_hint">profile picture</string>
    <string name="main_fragment_text">Main Fragment</string>
    <string name="button_go_to_settings">Settings</string>
    <string name="button_nuke">Nuke</string>

    <string name="settings_label">Settings</string>
    <string name="settings_message">Hello</string>

    <string name="user_info_label">User info:</string>
    <string name="name_label">Name:</string>
    <string name="city_label">City:</string>
    <string name="email_label">Email:</string>
    <string name="api_error">Connection error</string>
    <string name="retry">Retry</string>

</resources>
